clang/test/BSC/Negative/Method/This/this_as_first_parameter/member_function_this_parameter_definition/member_function_this_parameter_definition.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};
_Owned struct Bar {
public:
  int a;
};

int struct Foo::getA(This _Borrow this) { // expected-error {{_Borrow type requires a pointer or reference ('This' is invalid)}}
  return 0;
}

int struct Foo::getB(struct Foo _Borrow this) { // expected-error {{_Borrow type requires a pointer or reference ('struct Foo' is invalid)}}
  return 0;
}

int struct Foo::getC(const This _Borrow this) { // expected-error {{_Borrow type requires a pointer or reference ('This' is invalid)}}
  return 0;
}

int struct Foo::getC_2(const struct Foo _Borrow this) { // expected-error {{_Borrow type requires a pointer or reference ('struct Foo' is invalid)}}
  return 0;
}
int struct Foo::getD(This _Owned this) { // expected-error {{type of 'This' cannot be qualified by '_Owned'}} 
  return 0;
}
int struct Foo::getD_2(struct Foo _Owned this) { // expected-error {{type of 'struct Foo' cannot be qualified by '_Owned'}}
  return 0;
}



// error member functions definition for _Owned struct
int Bar::getA(const This this) { // ok
  return 0;
}

int Bar::getB(This this) { // ok
  return 0;
}

int Bar::getB_2(Bar this) { // ok
  return 0;
}

int Bar::getC(This _Owned this) { // expected-error {{type of 'This' cannot be qualified by '_Owned'}} 
  return 0;
}

// expected-warning@+1 {{duplicate '_Owned' declaration specifier}}
int Bar::getC_2(Bar _Owned this) { 
  return 0;
}
